# imgfprint-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRODUCTION_IMPROVEMENTS.md  README.md  USAGE.md  future.md  image.md  logo-preview.html
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: batch_process.rs  compare_images.rs  error_handling.rs  find_duplicates.rs  semantic_search.rs  serialize.rs  similarity_search.rs  single_algorithm.rs  zero_copy_persistence.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: algorithm_fuzz.rs  batch_fuzz.rs  compare_fuzz.rs  deserialize_fuzz.rs  fingerprint_fuzz.rs
src/: error.rs  lib.rs
src/core/: fingerprint.rs  fingerprinter.rs  mod.rs  similarity.rs
src/embed/: local.rs  mod.rs
src/hash/: ahash.rs  algorithms.rs  blocks.rs  dhash.rs  mod.rs  phash.rs
src/imgproc/: decode.rs  mod.rs  preprocess.rs
tests/: property_tests.rs  test_real_images.rs
