[package]
name = "imgfprint-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance, deterministic image fingerprinting library"
license = "MIT OR Apache-2.0"
keywords = ["image", "fingerprint", "perceptual-hash", "phash", "deduplication"]
categories = ["multimedia::images", "algorithms"]
rust-version = "1.70"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
fast_image_resize = { version = "4.0", features = ["image"] }
sha2 = "0.10"
rustdct = "0.7"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.10", optional = true }
once_cell = "1.20"

[features]
default = ["serde", "parallel"]
serde = []
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0"
bincode = "1.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 2