[package]
name = "imgfprint"
version = "0.1.1"
edition = "2021"
description = "High-performance, deterministic image fingerprinting library"
license = "MIT"
keywords = ["image", "fingerprint", "perceptual-hash", "phash", "deduplication"]
categories = ["multimedia::images", "algorithms"]
rust-version = "1.70"
repository = "https://github.com/themankindproject/imgfprint-rs"
readme = "README.md"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
fast_image_resize = { version = "6.0", features = ["image"] }
sha2 = "0.10"
realfft = "3.4"
rustfft = "6.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.10", optional = true }
tract-onnx = { version = "0.21", optional = true }

[features]
default = ["serde", "parallel"]
serde = []
parallel = ["dep:rayon"]
local-embedding = ["dep:tract-onnx"]
local-embedding-model = ["local-embedding"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0"
bincode = "1.3"

[[example]]
name = "semantic_search"
required-features = ["local-embedding"]

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 2