[package]
name = "imgfprint-rs-fuzz"
version = "0.0.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fingerprint_fuzz"
path = "fuzz_targets/fingerprint_fuzz.rs"

[[bin]]
name = "compare_fuzz"
path = "fuzz_targets/compare_fuzz.rs"

[[bin]]
name = "deserialize_fuzz"
path = "fuzz_targets/deserialize_fuzz.rs"

[dependencies]
imgfprint-rs = { path = "..", features = ["serde"] }
libfuzzer-sys = "0.4"
serde_json = "1.0"
bincode = "1.3"
